--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource-variable/mona-sans": "^5.0.1",
     "@tailwindcss/vite": "^4.0.3",
     "framer-motion": "^12.4.3",
+    "motion": "^12.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
